--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </ul>
           </div>
           <div class="row first-content">
-            <div class="col-md-12 text-center first-content add-space no-padding" id="layer">
+            <div class="col-md-12 col-sm-offset-2 col-sm-8 text-center first-content add-space no-padding" id="layer">
               <h1>GEDEBUK</h1>
               <div class="secondary-colorwhite first-content scroll">
                 <p class="first-content">Lorem ipsum dolor sit amet, djsdnejnd ejsubd jues bjst dignissimos quisquam in.</p>
@@ -72,7 +72,7 @@
               </div>
               <div class="col-md-offset-3 col-md-6 first-content scroll">
                 <div class="secondary-colorwhite first-content">
-                  <div class="col-md-12 col-sm-12 inline button no-padding">
+                  <div class="col-md-12 col-sm-12 col-xs-12 inline button no-padding">
                     <button type="button" class="btn btn-danger" name="button">Hot</button>
                     <button type="button" class="btn btn-primary" name="button">New</button>
                     <button type="button" class="btn btn-success" name="button">Jas</button>
@@ -84,7 +84,7 @@
                   <div class="col-md-2 col-sm-2 col-xs-3 text-box no-padding no-margin">
                     <button class="btn btn-lg btn-primary no-margin" type="submit" name="search"><p><i class="fa fa-search"></i></p></button>
                   </div>
-                  <div class="col-md-12 col-sm-12">
+                  <div class="col-md-12 col-sm-12 col-xs-12">
                     <p class="inline secondary-colorwhite caripopuler">Pencarian populer : </p>
                     <ul class="">
                       <li><a href="#"><p class="inline caripopuler text-primary">uin</p></a></li>
@@ -110,11 +110,11 @@
     <section class="offer">
       <div class="container">
         <div class="row">
-          <div class="col-md-9 col-sm-9 col-xs-12">
+          <div class="col-md-9 col-sm-9 col-xs-9">
             <h4>Punya buku tapi tidak terpakai/hanya sebagai hiasan rak?</h4>
             <small>Lorem ipsum dolor sit.</small>
           </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
+          <div class="col-md-3 col-sm-3 col-xs-3">
             <button type="submit" class="btn btn-lg btn-default">Pinjemin aja!</button>
           </div>
         </div>
@@ -125,7 +125,7 @@
     <section class="sec">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-xs-12 panelkiri">
+          <div class="col-md-4 col-sm-12 col-xs-12 panelkiri">
             <div class="kategori add-space">
               <h2 class="garisbawah">Kategori</h2>
               <div class="list-group">
@@ -145,66 +145,69 @@
             </div>
             <div class="promoted first-content">
               <h2 class="garisbawah">Promoted Books</h2>
-              <a href="#">
-                <div class="media">
-                  <div class="media-left">
-                      <img class="media-object" src="assets/bg.jpeg" alt="Judul Buku">
+              <div class="scroll-page">
+                <a href="#">
+                  <div class="media">
+                    <div class="media-left">
+                        <img class="media-object" src="assets/bg.jpeg" alt="Judul Buku">
+                    </div>
+                    <div class="media-body garisbawah">
+                      <h4 class="media-heading">Ini judul buku</h4>
+                      <small>oleh WR. Supratman</small>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
+                    </div>
                   </div>
-                  <div class="media-body garisbawah">
-                    <h4 class="media-heading">Ini judul buku</h4>
-                    <small>oleh WR. Supratman</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
+                </a>
+                <a href="#">
+                  <div class="media ">
+                    <div class="media-left">
+                        <img class="media-object" src="assets/bg2.jpg" alt="Judul Buku">
+                    </div>
+                    <div class="media-body garisbawah">
+                      <h4 class="media-heading">Ini judul buku</h4>
+                      <small>oleh WR. Supratman</small>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
+                    </div>
                   </div>
-                </div>
-              </a>
-              <a href="#">
-                <div class="media ">
-                  <div class="media-left">
-                      <img class="media-object" src="assets/bg2.jpg" alt="Judul Buku">
+                </a>
+                <a href="#">
+                  <div class="media ">
+                    <div class="media-left">
+                        <img class="media-object" src="assets/fb.png" alt="Judul Buku">
+                    </div>
+                    <div class="media-body garisbawah">
+                      <h4 class="media-heading">Ini judul buku</h4>
+                      <small>oleh WR. Supratman</small>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
+                    </div>
                   </div>
-                  <div class="media-body garisbawah">
-                    <h4 class="media-heading">Ini judul buku</h4>
-                    <small>oleh WR. Supratman</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
+                </a>
+                <a href="#">
+                  <div class="media ">
+                    <div class="media-left">
+                        <img class="media-object" src="assets/coverbuku.jpg" alt="Judul Buku">
+                    </div>
+                    <div class="media-body garisbawah">
+                      <h4 class="media-heading">Ini judul buku</h4>
+                      <small>oleh WR. Supratman</small>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
+                    </div>
                   </div>
-                </div>
-              </a>
-              <a href="#">
-                <div class="media ">
-                  <div class="media-left">
-                      <img class="media-object" src="assets/fb.png" alt="Judul Buku">
-                  </div>
-                  <div class="media-body garisbawah">
-                    <h4 class="media-heading">Ini judul buku</h4>
-                    <small>oleh WR. Supratman</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
-                  </div>
-                </div>
-              </a>
-              <a href="#">
-                <div class="media ">
-                  <div class="media-left">
+                </a>
+                <a href="#">
+                  <div class="media ">
+                    <div class="media-left">
                       <img class="media-object" src="assets/coverbuku.jpg" alt="Judul Buku">
+                    </div>
+                    <div class="media-body garisbawah">
+                      <h4 class="media-heading">Ini judul buku</h4>
+                      <small>oleh WR. Supratman</small>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
+                    </div>
                   </div>
-                  <div class="media-body garisbawah">
-                    <h4 class="media-heading">Ini judul buku</h4>
-                    <small>oleh WR. Supratman</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
-                  </div>
-                </div>
-              </a>
-              <a href="#">
-                <div class="media ">
-                  <div class="media-left">
-                    <img class="media-object" src="assets/coverbuku.jpg" alt="Judul Buku">
-                  </div>
-                  <div class="media-body garisbawah">
-                    <h4 class="media-heading">Ini judul buku</h4>
-                    <small>oleh WR. Supratman</small>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, reiciendis?</p>
-                  </div>
-                </div>
-              </a>
+                </a>
+              </div>
+
               <a href=""><small class="first-content text-primary premium"><i class="fa fa-tasks"></i> Bagaimana agar buku dipromosikan?</small></a>
             </div>
           </div>
@@ -220,7 +223,7 @@
                   <div class="media">
                     <div class="media-left">
                       <a href="#">
-                        <img class="media-object" src="assets/bg.jpeg" alt="Judul Buku">
+                        <img class="media-object" src="assets/bg2.jpg" alt="Judul Buku">
                       </a>
                     </div>
                     <div class="media-body garisbawah">
@@ -228,13 +231,13 @@
                       <small>oleh WR. Supratman</small>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 no-padding">
+                        <div class="col-md-6 col-sm-6 no-padding">
                           <small class="inline">Share : </small>
                           <a class="sosmed" href="https://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $title; ?>&amp;p[summary]=<?php echo $summary;?>&amp;p[url]=<?php echo $url; ?>&amp;&p[images][0]=<?php echo $image;?>', 'sharer', 'toolbar=0,status=0,width=550,height=400"><img src="assets/fb.png" alt="Share to Facebook"></a>
                           <a class="sosmed" href="whatsapp://send?text=Lihat buku di gedebuk.com, bagus!"data-action="share/whatsapp/share"><img src="assets/wa.png" alt="Share to Instagram"></a>
                           <a class="sosmed" href="https://twitter.com/share?source=sharethiscom&text=<?php echo $title;?>&url=<?php echo $url; ?>&via=gedebuk.com"><img src="assets/tw.png" alt="Share to Twiter"></a>
                         </div>
-                        <div class="col-md-6 attention">
+                        <div class="col-md-6 col-sm-6 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Sewa</button></a>
                           <a href="#"><button type="button" class="btn btn-danger" name="button">Beli</button></a>
                         </div>
@@ -254,13 +257,13 @@
                       <small>oleh WR. Supratman</small>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 no-padding">
+                        <div class="col-md-6 col-sm-6 no-padding">
                           <small class="inline">Share : </small>
                           <a class="sosmed" href="https://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $title; ?>&amp;p[summary]=<?php echo $summary;?>&amp;p[url]=<?php echo $url; ?>&amp;&p[images][0]=<?php echo $image;?>', 'sharer', 'toolbar=0,status=0,width=550,height=400"><img src="assets/fb.png" alt="Share to Facebook"></a>
                           <a class="sosmed" href="whatsapp://send?text=Lihat buku di gedebuk.com, bagus!"data-action="share/whatsapp/share"><img src="assets/wa.png" alt="Share to Instagram"></a>
                           <a class="sosmed" href="https://twitter.com/share?source=sharethiscom&text=<?php echo $title;?>&url=<?php echo $url; ?>&via=gedebuk.com"><img src="assets/tw.png" alt="Share to Twiter"></a>
                         </div>
-                        <div class="col-md-6 attention">
+                        <div class="col-md-6 col-sm-6 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Sewa</button></a>
                           <a href="#"><button type="button" class="btn btn-danger" name="button">Beli</button></a>
                         </div>
@@ -280,13 +283,13 @@
                       <small>oleh WR. Supratman</small>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 no-padding">
+                        <div class="col-md-6 col-sm-6 no-padding">
                           <small class="inline">Share : </small>
                           <a class="sosmed" href="https://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $title; ?>&amp;p[summary]=<?php echo $summary;?>&amp;p[url]=<?php echo $url; ?>&amp;&p[images][0]=<?php echo $image;?>', 'sharer', 'toolbar=0,status=0,width=550,height=400"><img src="assets/fb.png" alt="Share to Facebook"></a>
                           <a class="sosmed" href="whatsapp://send?text=Lihat buku di gedebuk.com, bagus!"data-action="share/whatsapp/share"><img src="assets/wa.png" alt="Share to Instagram"></a>
                           <a class="sosmed" href="https://twitter.com/share?source=sharethiscom&text=<?php echo $title;?>&url=<?php echo $url; ?>&via=gedebuk.com"><img src="assets/tw.png" alt="Share to Twiter"></a>
                         </div>
-                        <div class="col-md-6 attention">
+                        <div class="col-md-6 col-sm-6 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Sewa</button></a>
                           <a href="#"><button type="button" class="btn btn-danger" name="button">Beli</button></a>
                         </div>
@@ -306,13 +309,13 @@
                       <small>oleh WR. Supratman</small>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 no-padding">
+                        <div class="col-md-6 col-sm-6 no-padding">
                           <small class="inline">Share : </small>
                           <a class="sosmed" href="https://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $title; ?>&amp;p[summary]=<?php echo $summary;?>&amp;p[url]=<?php echo $url; ?>&amp;&p[images][0]=<?php echo $image;?>', 'sharer', 'toolbar=0,status=0,width=550,height=400"><img src="assets/fb.png" alt="Share to Facebook"></a>
                           <a class="sosmed" href="whatsapp://send?text=Lihat buku di gedebuk.com, bagus!"data-action="share/whatsapp/share"><img src="assets/wa.png" alt="Share to Instagram"></a>
                           <a class="sosmed" href="https://twitter.com/share?source=sharethiscom&text=<?php echo $title;?>&url=<?php echo $url; ?>&via=gedebuk.com"><img src="assets/tw.png" alt="Share to Twiter"></a>
                         </div>
-                        <div class="col-md-6 attention">
+                        <div class="col-md-6 col-sm-6 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Sewa</button></a>
                           <a href="#"><button type="button" class="btn btn-danger" name="button">Beli</button></a>
                         </div>
@@ -332,13 +335,13 @@
                       <small>oleh WR. Supratman</small>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 no-padding">
+                        <div class="col-md-6 col-sm-6 no-padding">
                           <small class="inline">Share : </small>
                           <a class="sosmed" href="https://www.facebook.com/sharer.php?s=100&amp;p[title]=<?php echo $title; ?>&amp;p[summary]=<?php echo $summary;?>&amp;p[url]=<?php echo $url; ?>&amp;&p[images][0]=<?php echo $image;?>', 'sharer', 'toolbar=0,status=0,width=550,height=400"><img src="assets/fb.png" alt="Share to Facebook"></a>
                           <a class="sosmed" href="whatsapp://send?text=Lihat buku di gedebuk.com, bagus!"data-action="share/whatsapp/share"><img src="assets/wa.png" alt="Share to Instagram"></a>
                           <a class="sosmed" href="https://twitter.com/share?source=sharethiscom&text=<?php echo $title;?>&url=<?php echo $url; ?>&via=gedebuk.com"><img src="assets/tw.png" alt="Share to Twiter"></a>
                         </div>
-                        <div class="col-md-6 attention">
+                        <div class="col-md-6 col-sm-6 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Sewa</button></a>
                           <a href="#"><button type="button" class="btn btn-danger" name="button">Beli</button></a>
                         </div>
