--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </ul>
           </div>
           <div class="row first-content">
-            <div class="col-md-12 col-sm-offset-2 col-sm-8 text-center first-content add-space no-padding" id="layer">
+            <div class="col-md-12 col-sm-12 text-center first-content add-space no-padding" id="layer">
               <h1>GEDEBUK</h1>
               <div class="secondary-colorwhite first-content scroll">
                 <p class="first-content">Lorem ipsum dolor sit amet, djsdnejnd ejsubd jues bjst dignissimos quisquam in.</p>
